# solar_os_tab5

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  partitions_cardputer.csv  partitions_tab5.csv  platformio.ini  sdkconfig.cardputer.defaults  sdkconfig.defaults  sdkconfig.defaults.tab5  sdkconfig.tab5.defaults
boards/: m5stack_cardputer.cmake  m5stack_cardputer.json  m5stack_tab5.cmake  m5stack_tab5.json  waveshare_esp32_s3_rlcd_4_2.cmake  waveshare_esp32_s3_rlcd_4_2.json
boards/drivers/: audio_es8388_es7210.cmake  battery_ina226.cmake  display_ili9881c_dsi.cmake  display_mipi_dsi.cmake  display_st7789.cmake  imu_bmi270.cmake  keyboard_cardputer.cmake  keyboard_usb_hid.cmake  rtc_rx8130.cmake  rtc_rx8130ce.cmake  sensors_bmi270.cmake  storage_sdspi.cmake  touch_gt911.cmake
components/micropython_embed/: CMakeLists.txt  README.md  mpconfigport.h
components/micropython_embed/micropython_embed/genhdr/: moduledefs.h  mpversion.h  qstrdefs.generated.h
components/micropython_embed/micropython_embed/port/: embed_util.c  mphalport.c  mphalport.h
components/micropython_embed/micropython_embed/shared/runtime/: gchelper.h
components/stb_image/: CMakeLists.txt  stb_image_port.c
components/stb_image/include/: solar_os_stb_image.h
components/u8g2/: CMakeLists.txt
components/u8g2/src/clib/: u8g2_fonts.c  u8g2_fonts_extra.c  u8g2_terminal_fonts.c
doc/: commands.md  jobs.md  solar_os_architecture.dot  solar_os_boards.md  solar_os_lua.md  solar_os_ota_schema.md  solar_os_python.md
flavors/: cardputer.toml  tab5.toml
fonts/: .gitignore  README.md  generate_u8g2_fonts.py
fonts/tools/bdfconv/: .gitignore  README.solaros.md
include/: solar_os_board.h  waveshare_esp32_s3_rlcd_4_2.h
include/boards/: m5stack_cardputer.h  m5stack_tab5.h  waveshare_esp32_s3_rlcd_4_2.h
keys/: ota_signing_public.pem
scripts/: generate_flavor_config.py  platformio_solaros_flavor.py
src/: CMakeLists.txt  idf_component.yml  main.c  solar_os.c  solar_os.h  solar_os_jobs.c  solar_os_jobs.h  solar_os_task.c  solar_os_task.h
src/apps/: solar_os_app_registry.c  solar_os_app_registry.h  solar_os_audio_apps.c  solar_os_audio_apps.h  solar_os_chat.c  solar_os_clock.c  solar_os_clock.h  solar_os_com.c  solar_os_com.h  solar_os_curl.c  solar_os_curl.h  solar_os_edit.c  solar_os_edit.h  solar_os_files.c  solar_os_files.h  solar_os_invaders.c  solar_os_invaders.h  solar_os_less.c  solar_os_less.h  solar_os_lua.c  solar_os_notes.c  solar_os_notes.h  solar_os_plot.c  solar_os_plot.h  solar_os_python.c  solar_os_python.h  solar_os_reader.c  solar_os_reader.h  solar_os_scp.c  solar_os_scp_app.h  solar_os_sheet.c  solar_os_sheet.h  solar_os_shell.c  solar_os_shell.h  solar_os_ssh.c  solar_os_ssh_app.h  solar_os_telnet.c  solar_os_view.c  solar_os_view.h  solar_os_web.c
src/board/: solar_os_board_audio_es8388_es7210.c  solar_os_board_battery_ina226.c  solar_os_board_display.h  solar_os_board_display_ili9881c.c  solar_os_board_display_mipi_dsi.c  solar_os_board_display_st7305.c  solar_os_board_display_st7789.c  solar_os_board_rtc_rx8130.c  solar_os_board_rtc_rx8130ce.c  solar_os_board_sensors_bmi270.c  solar_os_board_touch.h  solar_os_board_touch_gt911.c
src/drivers/: adc_port.c  adc_port.h  audio_codec_board.c  audio_codec_board.h  audio_codec_es8388.c  audio_codec_es8388.h  battery_adc.c  battery_adc.h  battery_ina226.c  battery_ina226.h  bmi270.c  bmi270.h  bmi270_config.inc  cdc_port.c  cdc_port.h  gpio_port.c  gpio_port.h  i2c_bus.c  i2c_bus.h  imu_bmi270.c  imu_bmi270.h  keyboard_cardputer.c  keyboard_usb_hid.c  lcd_ili9881c_dsi.c  lcd_ili9881c_dsi.h  lcd_ili9881c_init_data.inc  lcd_mipi_dsi.c  lcd_mipi_dsi.h  lcd_st7123_init_data.inc  lcd_st7789.c  lcd_st7789.h  pi4ioe5v6408.c  pi4ioe5v6408.h  pwm_port.c  pwm_port.h  rlcd_st7305.c  rlcd_st7305.h  rtc_pcf85063.c  rtc_pcf85063.h  rtc_rx8130ce.c  (+13 more)
src/jobs/: solar_os_batmon_job.c  solar_os_batmon_job.h  solar_os_bridge_job.c  solar_os_bridge_job.h  solar_os_chatd_job.c  solar_os_chatd_job.h  solar_os_httpd_job.c  solar_os_httpd_job.h  solar_os_job_registry.c  solar_os_job_registry.h  solar_os_log_job.c  solar_os_log_job.h  solar_os_ntp_sync_job.c  solar_os_ntp_sync_job.h  solar_os_shell_job.c  solar_os_shell_job.h
src/services/: solar_os_adc.c  solar_os_adc.h  solar_os_audio.c  solar_os_audio.h  solar_os_battery.c  solar_os_battery.h  solar_os_ble_keyboard.c  solar_os_ble_keyboard.h  solar_os_board_caps.c  solar_os_board_caps.h  solar_os_cdc.c  solar_os_cdc.h  solar_os_chat.c  solar_os_chat.h  solar_os_clipboard.c  solar_os_clipboard.h  solar_os_crypto.c  solar_os_crypto.h  solar_os_doc.c  solar_os_doc.h  solar_os_epub.c  solar_os_epub.h  solar_os_fonts.h  solar_os_gfx.c  solar_os_gfx.h  solar_os_gfx_internal.h  solar_os_gpio.c  solar_os_gpio.h  solar_os_html.c  solar_os_html.h  solar_os_i2c.c  solar_os_i2c.h  solar_os_identity.c  solar_os_identity.h  solar_os_keyboard.h  solar_os_keys.h  solar_os_log.c  solar_os_log.h  solar_os_net.c  solar_os_net.h  (+44 more)
src/shell/: solar_os_shell_commands.c  solar_os_shell_commands.h  solar_os_shell_common.c  solar_os_shell_common.h  solar_os_shell_daq.c  solar_os_shell_hardware.c  solar_os_shell_io.c  solar_os_shell_io.h  solar_os_shell_mqtt.c  solar_os_shell_network.c  solar_os_shell_setterm_tui.c  solar_os_shell_system.c  solar_os_shell_wifi_tui.c  solar_os_vt100.c  solar_os_vt100.h
